--- a/react-app/package.json
+++ b/react-app/package.json
@@ -13,7 +13,8 @@
     "motion": "^12.23.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
