--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -79,6 +79,12 @@
             <artifactId>nimbus-jose-jwt</artifactId>
             <version>10.5</version>
         </dependency>
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>33.5.0-jre</version> </dependency>
+
 	</dependencies>
 
 	<build>
