Se agregó la exportación de la Lista Productos a Excel usando Apache POI

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=api.jugueria
 spring.sql.init.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/jug2
+spring.datasource.url=jdbc:postgresql://localhost:5432/jugueria2
 spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.password=1234
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
