--- a/Frontend/JugueriaFront/package.json
+++ b/Frontend/JugueriaFront/package.json
@@ -11,10 +11,15 @@
     "start": "vite"
   },
   "dependencies": {
+    "@coreui/coreui": "^5.4.3",
+    "@coreui/react": "^5.9.1",
+    "axios": "^1.12.2",
+    "bootstrap": "^5.3.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.2"
+    "react-router-dom": "^7.9.2",
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
