--- a/Frontend/JugueriaFront/package.json
+++ b/Frontend/JugueriaFront/package.json
@@ -11,14 +11,12 @@
     "start": "vite"
   },
   "dependencies": {
-    "@coreui/coreui": "^5.4.3",
-    "@coreui/react": "^5.9.1",
-    "axios": "^1.12.2",
-    "bootstrap": "^5.3.8",
+    "axios": "^1.13.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.2",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.3.0"
   },
   "devDependencies": {
