--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -25,6 +25,8 @@ mp.access-token=TEST-7286318227929185-102401-5b363751b7f61489fe4e6ca76d396932-60
 mp.success-url=http://localhost:5173/success
 mp.failure-url=http://localhost:5173/failure
 mp.pending-url=http://localhost:5173/pending
+# URL donde Mercado Pago enviará el aviso (Webhook)
+# mp.notification-url=https://api.jugueria-tiajulia.com/api/checkout/webhook <--- Reemplazar esta dirección https por la real que use el negocio en producción
 
 spring.servlet.multipart.max-file-size=10MB
 
